Anonymisering av log - fjern fnr og orgnr (#722)